--- a/main/static/scss/notelist.scss
+++ b/main/static/scss/notelist.scss
@@ -4,6 +4,8 @@
 body {
 
   #content {
+
+    margin-top: 0.1rem;
     
     @media screen and (max-width: 980px) {
       margin-left: 1rem;
